--- a/src/pages/trains/trains.html
+++ b/src/pages/trains/trains.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content>
+  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
   <ion-list>
     <ion-item *ngFor="let train of trainList">
           {{train.name}}
