--- a/src/pages/buses/buses.html
+++ b/src/pages/buses/buses.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content class="bus" no-bounce>
-  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+  <!-- <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar> -->
   <ion-list>
     <ion-card>
       <!--This part of code loops through the busList data structure located in home.ts and creates an ion-item for each entry-->
