--- a/src/pages/trains/trains.html
+++ b/src/pages/trains/trains.html
@@ -1,8 +1,6 @@
 ﻿<ion-header>
   <ion-navbar>
-    <ion-title>
-      Trains
-    </ion-title>
+    <ion-title>Trains</ion-title>
   </ion-navbar>
 </ion-header>
 
