Added bus and train detail pages

--- a/src/pages/train-detail/train-detail.html
+++ b/src/pages/train-detail/train-detail.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the BusDetailPage page.
+  Generated template for the TrainDetailPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Bus Times</ion-title>
+    <ion-title>Train Times</ion-title>
   </ion-navbar>
 
 </ion-header>
