--- a/src/pages/bus-detail/bus-detail.html
+++ b/src/pages/bus-detail/bus-detail.html
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Bus Times</ion-title>
+    <ion-title>{{bus.name}}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <div id="map" style="width:100%; height:100%;"></div>
 </ion-content>
