Early bus times implementation

--- a/src/pages/bus-detail/bus-detail.html
+++ b/src/pages/bus-detail/bus-detail.html
@@ -12,5 +12,13 @@
 
 
 <ion-content padding>
-  
+  <ion-list>
+    <ion-card>
+      <!--This part of code loops through the busList data structure located in home.ts and creates an ion-item for each entry-->
+      <ion-item item-md-divider-color="primary" *ngFor="let time of busTimes">
+        <!--The name of each bus stop printed by referencing the bus.name property-->
+          {{time.aimed_departure_time}}
+      </ion-item>
+    </ion-card>
+  </ion-list>
 </ion-content>
