Allow code to be run without interwebs

--- a/src/pages/buses/buses.html
+++ b/src/pages/buses/buses.html
@@ -6,7 +6,7 @@
 
 <ion-content class="bus" no-bounce>
   <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
-  <div id="map" style="width:80%; height:100%;"></div>
+  <!-- <div id="map" style="width:80%; height:100%;"></div> -->
   <ion-list>
     <ion-card>
       <!--This part of code loops through the busList data structure located in home.ts and creates an ion-item for each entry-->
