--- a/src/pages/buses/buses.html
+++ b/src/pages/buses/buses.html
@@ -1,22 +1,28 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Buses</ion-title>
+    <ion-buttons end>
+      <ion-toggle (ionChange)="toggleMap()"></ion-toggle>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content class="bus" no-bounce>
   <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
-  <div id="map" style="width:80%; height:100%;"></div>
-  <ion-list>
-    <ion-card>
-      <!--This part of code loops through the busList data structure located in home.ts and creates an ion-item for each entry-->
-      <ion-item item-md-divider-color="primary" *ngFor="let bus of filteredBusList">
-        <button ion-item (click)="openItem(bus)">
-        <!--The name of each bus stop printed by referencing the bus.name property-->
-          {{bus.name}}<br>
-          {{bus.description}}
-        </button>
-      </ion-item>
-    </ion-card>
-  </ion-list>
+  <div *ngIf="showMap; else elseBlock" id="map" style="width:80%; height:100%;">
+  </div>
+  <ng-template #elseBlock>
+    <ion-list>
+      <ion-card>
+        <!--This part of code loops through the busList data structure located in home.ts and creates an ion-item for each entry-->
+        <ion-item item-md-divider-color="primary" *ngFor="let bus of filteredBusList">
+          <button ion-item (click)="openItem(bus)">
+          <!--The name of each bus stop printed by referencing the bus.name property-->
+            {{bus.name}}<br>
+            {{bus.description}}
+          </button>
+        </ion-item>
+      </ion-card>
+    </ion-list>
+  </ng-template>
 </ion-content>
