--- a/src/pages/buses/buses.html
+++ b/src/pages/buses/buses.html
@@ -8,8 +8,8 @@
 </ion-header>
 
 <ion-content class="bus" no-bounce>
-  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
-  <div *ngIf="showMap; else elseBlock" id="map" style="width:80%; height:100%;">
+  <ion-searchbar (ionInput)="getItems($event)" style="width:100%; height:10%"></ion-searchbar>
+  <div *ngIf="showMap; else elseBlock" id="map" style="width:100%; height:90%;">
   </div>
   <ng-template #elseBlock>
     <ion-list>
