--- a/src/pages/train-detail/train-detail.html
+++ b/src/pages/train-detail/train-detail.html
@@ -5,14 +5,20 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>Train Times</ion-title>
+    <ion-title>{{train.name}}</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-
+  <ion-list>
+    <ion-card>
+      <!--This part of code loops through the busList data structure located in home.ts and creates an ion-item for each entry-->
+      <ion-item *ngFor="let time of trainTimes">
+        <!--The name of each bus stop printed by referencing the bus.name property-->
+          <h3 class = 'leftAlign'>{{time.origin_name}} - {{time.destination_name}}</h3>
+          <h3 class = 'rightAlign'>{{time.aimed_departure_time}}</h3>
+      </ion-item>
+    </ion-card>
+  </ion-list>
 </ion-content>
