--- a/src/pages/buses/buses.html
+++ b/src/pages/buses/buses.html
@@ -9,8 +9,7 @@
 
 <ion-content class="bus" no-bounce>
   <ion-searchbar (ionInput)="getItems($event)" style="width:100%; height:10%"></ion-searchbar>
-  <div *ngIf="showMap; else elseBlock" id="map" style="width:100%; height:90%;">
-  </div>
+  <div *ngIf="showMap; else elseBlock" id="map" style="width:100%; height:90%;"></div>
   <ng-template #elseBlock>
     <ion-list>
       <ion-card>
