Made themes more uniform with each other

--- a/src/pages/bus-detail/bus-detail.html
+++ b/src/pages/bus-detail/bus-detail.html
@@ -10,19 +10,17 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content no-bounce>
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content>
     </ion-refresher-content>
   </ion-refresher>
       <ion-list>
-        <ion-card>
           <!--This part of code loops through the busList data structure located in home.ts and creates an ion-item for each entry-->
           <ion-item *ngFor="let time of busTimes">
             <!--The name of each bus stop printed by referencing the bus.name property-->
               <h3 class = 'leftAlign'>{{time.line}} - {{time.direction}}</h3>
               <h3 class = 'rightAlign'>{{time.best_departure_estimate}}</h3>
           </ion-item>
-        </ion-card>
       </ion-list>
 </ion-content>
