--- a/src/pages/buses/buses.html
+++ b/src/pages/buses/buses.html
@@ -7,21 +7,17 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content class="bus" no-bounce>
+<ion-content no-bounce>
   <ion-searchbar (ionInput)="getItems($event)" style="width:100%; height:10%"></ion-searchbar>
   <div *ngIf="showMap; else elseBlock" id="map" style="width:100%; height:90%;"></div>
   <ng-template #elseBlock>
     <ion-list>
-      <ion-card>
         <!--This part of code loops through the busList data structure located in home.ts and creates an ion-item for each entry-->
-        <ion-item item-md-divider-color="primary" *ngFor="let bus of filteredBusList">
-          <button ion-item (click)="openItem(bus)">
+          <button ion-item *ngFor="let bus of filteredBusList" (click)="openItem(bus)">
           <!--The name of each bus stop printed by referencing the bus.name property-->
             {{bus.name}}<br>
             {{bus.description}}
           </button>
-        </ion-item>
-      </ion-card>
     </ion-list>
   </ng-template>
 </ion-content>
