--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -9,6 +9,6 @@
 <ion-content>
   <ion-item no-lines>
     <ion-label>Toggle App Theme</ion-label>
-    <ion-toggle (ionChange)="toggleAppTheme()"></ion-toggle>
+    <ion-toggle class="themeSwitch" (ionChange)="toggleAppTheme()"></ion-toggle>
   </ion-item>
 </ion-content>
