--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs [class]="selectedTheme">
   <ion-tab [root]="tab1Root" tabTitle="Buses" tabIcon="bus"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Trains" tabIcon="train"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Settings" tabIcon="settings"></ion-tab>
