--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -7,8 +7,8 @@
 </ion-header>
 
 <ion-content>
-  <ion-item no-lines>
+  <ion-item no-lines  class="themeSwitch" >
     <ion-label>Toggle App Theme</ion-label>
-    <ion-toggle class="themeSwitch" (ionChange)="toggleAppTheme()"></ion-toggle>
+    <ion-toggle (ionChange)="toggleAppTheme()"></ion-toggle>
   </ion-item>
 </ion-content>
